# famliapp

./: .pre-commit-config.yaml  README.md
famliapp/: pyproject.toml
famliapp/src/famliapp/: __init__.py  connector.py  orthanc_connector.py
