[project]
name = "famliapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mwklose", email = "markklose17@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydicom>=3.0.1",
    "pyorthanc>=1.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (likely bugs)
    "SIM",  # flake8-simplify
]
ignore = [
    "D100",  # missing docstring in public module (optional)
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
